20150317 sound/win32sound.c: don't free static buffers (Sergio).
20150317 compat/{unix/socket.c,win32/socket.c},debugger/{breakpoint.c,
         command.c,event.c,expression.c,variable.c},peripherals/{dck.c,
         disk/{beta.c,disciple.c,disk.c,opus.c,plusd.c},flash/am29f010.c,
         ide/ide.c,if1.c,if2.c,nic/{enc28j60.c,w5100.c}},pokefinder/pokemem.c,
         sound/{aosound.c,sdlsound.c},ui/{gtk/options.pl,scaler/scaler.c,
         win32/options.pl},uimedia.c: use libspectrum_free where appropriate
         (Sergio).
20150317 z80/z80.c: set AF, AF' and SP to 0xffff on reset (Stuart).
20150317 z80/z80.c: leave most registers unchanged on a soft reset (Stuart).
20150317 z80/z80.c: document emulation of interrupt modes (Stuart).
20150318 z80/z80.c: emulate interrupt and NMI timings more precisely (Stuart).
20150318 z80/z80.c: really emulate interrupt timings more precisely (Stuart).
20150318 z80/z80.c: really emulate NMI timings more precisely (Stuart).
20150318 z80/z80_ops.c: don't trap on breakpoints whilst halted (Stuart).
20150318 z80/z80.pl: refactor generation of LD r,r handling (Stuart).
20150318 settings.dat,ui/options.dat,z80/{coretest.c,z80.{c,h,pl},z80_checks.h,
         z80_macros.h,z80_ops.c}: emulate NMOS and CMOS Z80 variants (Stuart).
20150318 man/fuse.1: document the CMOS Z80 option (Stuart).
20150318 man/fuse.1,menu.h,menu_data.dat,ui/{options.dat,widget/{menu.c,
         widget.[ch]}}: split tape/Microdrive options into a new Media Options
         dialogue (Stuart).
20150318 man/fuse.1,ui/options.dat: reorder General and Media options (Stuart).
20150318 man/fuse.1: reflect split of Peripherals Options dialogue into General
         and Disk options (Stuart).
20150319 ui/widget/{debugger.c,error.c,filesel.c,menu.c,options.pl,pokemem.c,
         roms.c,widget.[ch]}: add wrappers around widget_do() for better type
         safety (Stuart).
20150319 ui/widget/widget.c: fix incorrect but benign referencing of widget_menu
         array (Stuart).