@@ -405,7 +405,7 @@ display_write_if_dirty_timex( int x, int y )
   }
 }
 
-inline static void
+static inline void
 pentagon_16c_get_colour( libspectrum_byte data, libspectrum_byte *colour1,
                          libspectrum_byte *colour2 )
 {
@@ -597,7 +597,7 @@ copy_critical_region( int beam_x, int beam_y )
   critical_region_x = beam_x;
 }
 
-inline static void
+static inline void
 get_beam_position( int *x, int *y )
 {
   if( tstates < machine_current->line_times[ 0 ] ) {
@@ -643,7 +643,7 @@ display_update_critical( int x, int y )
 
 /* Mark the 8-pixel chunk at (x,y) as maybe dirty and update the critical
    region as appropriate */
-inline static void
+static inline void
 display_dirty_chunk( int x, int y )
 {
   /* If the write is between the start of the critical region and the
